Fixed toolbar overflow.

--- a/src/styles/_toolbar.scss
+++ b/src/styles/_toolbar.scss
@@ -121,6 +121,7 @@ button {
   white-space: nowrap;
   flex: 1;
   overflow-y: auto;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
 }
